force-app/main/default/objects/ProductPricesCurrencyConversionRates__c/ProductPricesCurrencyConversionRates__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Product Prices Currency Conversion Rates</label>
</CustomObject>