force-app/main/default/objects/ProductPricesCurrencyConversionRates__c/fields/Conversion_Rate_EUR__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate_EUR__c</fullName>
    <label>Conversion Rate EUR</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>