force-app/main/default/objects/ProductPricesCurrencyConversionRates__c/fields/Conversion_Rate_JPY__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate_JPY__c</fullName>
    <label>Conversion Rate JPY</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>